# Csci-Capstone

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md  capstone-plan.md  ethics.md
examples/: scope.example.yaml
examples/demo_target/: fake_service.py  seed_cves.json
scripts/: configure_env.py
src/vuln_platform/: __init__.py  __main__.py  audit.py  cli.py  config.py  ethics.py  events.py  models.py  orchestrator.py  storage.py
src/vuln_platform/agents/: __init__.py  base.py  chains.py  enrichment.py  recon.py  reporter.py  triage.py
src/vuln_platform/scanner/: __init__.py  banner_grab.py  connect_scan.py  host_discovery.py  network_detect.py  parse.py  port_scan.py
src/vuln_platform/web/: __init__.py  app.py
src/vuln_platform/web/static/: style.css
src/vuln_platform/web/templates/: about.html  audit.html  base.html  index.html  live.html  scan.html  scan_network.html
tests/: conftest.py  test_banner_grab.py  test_chains.py  test_connect_scan.py  test_enrichment.py  test_ethics.py  test_events.py  test_models.py  test_network_detect.py  test_orchestrator.py  test_parse.py  test_reporter.py  test_storage.py  test_triage.py  test_web.py
